# MEGA-FLOWZ-v3

./: .gitignore  index.html  package-lock.json  package.json  stats.html  tsconfig.json  vite.config.js  vite.config.js.timestamp-1771268511668-996d0e4e5b88b8.mjs
BACKEND/: Fullreadme.md  README.litcoffee  config.py  connector.py
BACKEND/cpp/: CMakeLists.txt  backend-documentation.ini
BACKEND/cpp/include/: broadcast_manager.hpp  chart_manager.hpp  config.hpp  connector_bridge.hpp  flatbuffer_builder.hpp  message_handler.hpp  symbol_cache.hpp  trade_handler.hpp  websocket_server.hpp
BACKEND/cpp/schema/: mega_flowz.fbs
BACKEND/cpp/src/: main.cpp
config/: startup.json
lightweight-charts-line-tools-circle/: README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json  typedoc.json
lightweight-charts-line-tools-circle/src/: index.ts
lightweight-charts-line-tools-circle/src/model/: LineToolCircle.ts
lightweight-charts-line-tools-circle/src/views/: LineToolCirclePaneView.ts
lightweight-charts-line-tools-fib-retracement/: README.md  package-lock.json  package.json  rollup.config.js  typedoc.json
lightweight-charts-line-tools-fib-retracement/src/: index.ts
lightweight-charts-line-tools-fib-retracement/src/model/: LineToolFibRetracement.ts
lightweight-charts-line-tools-fib-retracement/src/views/: LineToolFibRetracementPaneView.ts
lightweight-charts-line-tools-freehand/: LICENSE  README.md  package-lock.json  package.json  rollup.config.js  typedoc.json
lightweight-charts-line-tools-freehand/src/: index.ts
lightweight-charts-line-tools-freehand/src/model/: LineToolBrush.ts  LineToolHighlighter.ts
lightweight-charts-line-tools-freehand/src/views/: LineToolBrushPaneView.ts  LineToolHighlighterPaneView.ts
lightweight-charts-line-tools-lines/: README.md  index.html  package-lock.json  package.json  rollup.config.js  typedoc.json
lightweight-charts-line-tools-lines/src/: index.ts
lightweight-charts-line-tools-lines/src/model/: LineToolArrow.ts  LineToolCallout.ts  LineToolCrossLine.ts  LineToolExtendedLine.ts  LineToolHorizontalLine.ts  LineToolHorizontalRay.ts  LineToolRay.ts  LineToolTrendLine.ts  LineToolVerticalLine.ts
lightweight-charts-line-tools-lines/src/views/: LineToolArrowPaneView.ts  LineToolCalloutPaneView.ts  LineToolCrossLinePaneView.ts  LineToolExtendedLinePaneView.ts  LineToolHorizontalLinePaneView.ts  LineToolHorizontalRayPaneView.ts  LineToolRayPaneView.ts  LineToolTrendLinePaneView.ts  (+1 more)
lightweight-charts-line-tools-long-short-position/: README.md  package-lock.json  package.json  rollup.config.js  typedoc.json
lightweight-charts-line-tools-long-short-position/src/: index.ts
lightweight-charts-line-tools-market-depth/: README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json  typedoc.json
lightweight-charts-line-tools-market-depth/src/: index.ts
lightweight-charts-line-tools-parallel-channel/: README.md  package-lock.json  package.json  rollup.config.js  typedoc.json
lightweight-charts-line-tools-parallel-channel/src/: index.ts
lightweight-charts-line-tools-path/: README.md  package-lock.json  package.json  rollup.config.js  typedoc.json
lightweight-charts-line-tools-path/src/: index.ts
lightweight-charts-line-tools-price-range/: README.md  package-lock.json  package.json  rollup.config.js  typedoc.json
lightweight-charts-line-tools-price-range/src/: index.ts
lightweight-charts-line-tools-rectangle/: README.md  package-lock.json  package.json  rollup.config.js  typedoc.json
lightweight-charts-line-tools-rectangle/src/: index.ts
lightweight-charts-line-tools-text/: README.md  package-lock.json  package.json  rollup.config.js  typedoc.json
lightweight-charts-line-tools-text/src/: index.ts
lightweight-charts-line-tools-triangle/: README.md  package-lock.json  package.json  rollup.config.js  typedoc.json
lightweight-charts-line-tools-triangle/src/: index.ts
src/: main.ts  types.ts
src/alerts/: alerts-module.ts  alerts.css  alerts.html
src/calendar/: calendar-module.ts  calendar.css  calendar.html
src/chart/: chart-core.ts  chart-data-manager.ts  chart-types.ts  chart-utils.ts  chart.css  chart.html  price-alerts.ts  strategy-manager.ts
src/core/: connection-manager.ts  global.css  hotkey-manager.ts  module-manager.ts  price-utils.ts  symbol-icons.css  symbol-icons.ts  tab-manager.ts
src/journal/: journal-mini.css  journal-mini.html  journal-mini.ts  journal-modal.html  journal-ui.ts  journal.css  journal.ts  readme.md
src/notification/: index.ts  notification-modal.html  notification-types.ts  notification-ui.ts  notification.css  notification.ts
src/panel/: index.ts  panel-types.ts  panel-ui.ts  panel.css  panel.html  panels-module.ts
src/strategies/: strategy.ts
src/strategy/: strategy.css  strategy.html
src/trading/: positions-modal.css  positions-modal.html  trading-panel.ts  trading-settings-modal.css  trading-settings.ts  trading.css  trading.html  trading.ts
src/watchlist/: watchlist-module.ts  watchlist.css  watchlist.html
(+74 files in other folders)
